CompilersL1/BaseGrammarParser.cpp

// Generated from BaseGrammar.g4 by ANTLR 4.13.2


#include "BaseGrammarListener.h"
#include "BaseGrammarVisitor.h"

#include "BaseGrammarParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BaseGrammarParserStaticData final {
  BaseGrammarParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BaseGrammarParserStaticData(const BaseGrammarParserStaticData&) = delete;
  BaseGrammarParserStaticData(BaseGrammarParserStaticData&&) = delete;
  BaseGrammarParserStaticData& operator=(const BaseGrammarParserStaticData&) = delete;
  BaseGrammarParserStaticData& operator=(BaseGrammarParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag basegrammarParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<BaseGrammarParserStaticData> basegrammarParserStaticData = nullptr;

void basegrammarParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (basegrammarParserStaticData != nullptr) {
    return;
  }
#else
  assert(basegrammarParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<BaseGrammarParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "expression", "variableDeclaration", "constDeclaration", 
      "assignment", "compOperator", "println", "return", "blockStatement", 
      "functionCall", "functionDefinition", "ifStatement", "elifStatement", 
      "elseStatement", "whileStatement"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'var'", "'const'", "'println'", "'return'", "'{'", 
      "'}'", "','", "'fun'", "'if'", "'elif'", "'else'", "'while'", "", 
      "", "", "", "", "'*'", "'/'", "'+'", "'-'", "'='", "'=='", "'!='", 
      "'<'", "'<='", "'>'", "'>='"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "IDENTIFIER", 
      "NUMBER", "DOUBLE_NUMBER", "STRING_LITERAL", "BOOL", "ASTERISK", "SLASH", 
      "PLUS", "MINUS", "ASSIGN", "EQUAL", "NOT_EQUAL", "LESS", "LESS_OR_EQUAL", 
      "GREATER", "GREATER_OR_EQUAL", "SPACE", "LINE_COMMENT", "MULTI_LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  basegrammarParserStaticData = std::move(staticData);
}

}

BaseGrammarParser::BaseGrammarParser(TokenStream *input) : BaseGrammarParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

BaseGrammarParser::BaseGrammarParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  BaseGrammarParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *basegrammarParserStaticData->atn, basegrammarParserStaticData->decisionToDFA, basegrammarParserStaticData->sharedContextCache, options);
}

BaseGrammarParser::~BaseGrammarParser() {
  delete _interpreter;
}

const atn::ATN& BaseGrammarParser::getATN() const {
  return *basegrammarParserStaticData->atn;
}

std::string BaseGrammarParser::getGrammarFileName() const {
  return "BaseGrammar.g4";
}

const std::vector<std::string>& BaseGrammarParser::getRuleNames() const {
  return basegrammarParserStaticData->ruleNames;
}

const dfa::Vocabulary& BaseGrammarParser::getVocabulary() const {
  return basegrammarParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView BaseGrammarParser::getSerializedATN() const {
  return basegrammarParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

BaseGrammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BaseGrammarParser::ProgramContext::EOF() {
  return getToken(BaseGrammarParser::EOF, 0);
}

std::vector<BaseGrammarParser::StatementContext *> BaseGrammarParser::ProgramContext::statement() {
  return getRuleContexts<BaseGrammarParser::StatementContext>();
}

BaseGrammarParser::StatementContext* BaseGrammarParser::ProgramContext::statement(size_t i) {
  return getRuleContext<BaseGrammarParser::StatementContext>(i);
}


size_t BaseGrammarParser::ProgramContext::getRuleIndex() const {
  return BaseGrammarParser::RuleProgram;
}

void BaseGrammarParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void BaseGrammarParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any BaseGrammarParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

BaseGrammarParser::ProgramContext* BaseGrammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, BaseGrammarParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 52472) != 0)) {
      setState(32);
      statement();
      setState(37);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(38);
    match(BaseGrammarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

BaseGrammarParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BaseGrammarParser::VariableDeclarationContext* BaseGrammarParser::StatementContext::variableDeclaration() {
  return getRuleContext<BaseGrammarParser::VariableDeclarationContext>(0);
}

BaseGrammarParser::ConstDeclarationContext* BaseGrammarParser::StatementContext::constDeclaration() {
  return getRuleContext<BaseGrammarParser::ConstDeclarationContext>(0);
}

BaseGrammarParser::AssignmentContext* BaseGrammarParser::StatementContext::assignment() {
  return getRuleContext<BaseGrammarParser::AssignmentContext>(0);
}

BaseGrammarParser::FunctionDefinitionContext* BaseGrammarParser::StatementContext::functionDefinition() {
  return getRuleContext<BaseGrammarParser::FunctionDefinitionContext>(0);
}

BaseGrammarParser::FunctionCallContext* BaseGrammarParser::StatementContext::functionCall() {
  return getRuleContext<BaseGrammarParser::FunctionCallContext>(0);
}

BaseGrammarParser::PrintlnContext* BaseGrammarParser::StatementContext::println() {
  return getRuleContext<BaseGrammarParser::PrintlnContext>(0);
}

BaseGrammarParser::ReturnContext* BaseGrammarParser::StatementContext::return_() {
  return getRuleContext<BaseGrammarParser::ReturnContext>(0);
}

BaseGrammarParser::IfStatementContext* BaseGrammarParser::StatementContext::ifStatement() {
  return getRuleContext<BaseGrammarParser::IfStatementContext>(0);
}

BaseGrammarParser::BlockStatementContext* BaseGrammarParser::StatementContext::blockStatement() {
  return getRuleContext<BaseGrammarParser::BlockStatementContext>(0);
}

BaseGrammarParser::WhileStatementContext* BaseGrammarParser::StatementContext::whileStatement() {
  return getRuleContext<BaseGrammarParser::WhileStatementContext>(0);
}


size_t BaseGrammarParser::StatementContext::getRuleIndex() const {
  return BaseGrammarParser::RuleStatement;
}

void BaseGrammarParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void BaseGrammarParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any BaseGrammarParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

BaseGrammarParser::StatementContext* BaseGrammarParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, BaseGrammarParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(40);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(41);
      constDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(42);
      assignment();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(43);
      functionDefinition();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(44);
      functionCall();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(45);
      println();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(46);
      return_();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(47);
      ifStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(48);
      blockStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(49);
      whileStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

BaseGrammarParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t BaseGrammarParser::ExpressionContext::getRuleIndex() const {
  return BaseGrammarParser::RuleExpression;
}

void BaseGrammarParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- StringExprContext ------------------------------------------------------------------

tree::TerminalNode* BaseGrammarParser::StringExprContext::STRING_LITERAL() {
  return getToken(BaseGrammarParser::STRING_LITERAL, 0);
}

BaseGrammarParser::StringExprContext::StringExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::StringExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStringExpr(this);
}
void BaseGrammarParser::StringExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStringExpr(this);
}

std::any BaseGrammarParser::StringExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitStringExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DoubleExprContext ------------------------------------------------------------------

tree::TerminalNode* BaseGrammarParser::DoubleExprContext::DOUBLE_NUMBER() {
  return getToken(BaseGrammarParser::DOUBLE_NUMBER, 0);
}

BaseGrammarParser::DoubleExprContext::DoubleExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::DoubleExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDoubleExpr(this);
}
void BaseGrammarParser::DoubleExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDoubleExpr(this);
}

std::any BaseGrammarParser::DoubleExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitDoubleExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdExpContext ------------------------------------------------------------------

tree::TerminalNode* BaseGrammarParser::IdExpContext::IDENTIFIER() {
  return getToken(BaseGrammarParser::IDENTIFIER, 0);
}

BaseGrammarParser::IdExpContext::IdExpContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::IdExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdExp(this);
}
void BaseGrammarParser::IdExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdExp(this);
}

std::any BaseGrammarParser::IdExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitIdExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CompExprContext ------------------------------------------------------------------

BaseGrammarParser::CompOperatorContext* BaseGrammarParser::CompExprContext::compOperator() {
  return getRuleContext<BaseGrammarParser::CompOperatorContext>(0);
}

std::vector<BaseGrammarParser::ExpressionContext *> BaseGrammarParser::CompExprContext::expression() {
  return getRuleContexts<BaseGrammarParser::ExpressionContext>();
}

BaseGrammarParser::ExpressionContext* BaseGrammarParser::CompExprContext::expression(size_t i) {
  return getRuleContext<BaseGrammarParser::ExpressionContext>(i);
}

BaseGrammarParser::CompExprContext::CompExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::CompExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompExpr(this);
}
void BaseGrammarParser::CompExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompExpr(this);
}

std::any BaseGrammarParser::CompExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitCompExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PlusMinusExprContext ------------------------------------------------------------------

std::vector<BaseGrammarParser::ExpressionContext *> BaseGrammarParser::PlusMinusExprContext::expression() {
  return getRuleContexts<BaseGrammarParser::ExpressionContext>();
}

BaseGrammarParser::ExpressionContext* BaseGrammarParser::PlusMinusExprContext::expression(size_t i) {
  return getRuleContext<BaseGrammarParser::ExpressionContext>(i);
}

tree::TerminalNode* BaseGrammarParser::PlusMinusExprContext::PLUS() {
  return getToken(BaseGrammarParser::PLUS, 0);
}

tree::TerminalNode* BaseGrammarParser::PlusMinusExprContext::MINUS() {
  return getToken(BaseGrammarParser::MINUS, 0);
}

BaseGrammarParser::PlusMinusExprContext::PlusMinusExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::PlusMinusExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPlusMinusExpr(this);
}
void BaseGrammarParser::PlusMinusExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPlusMinusExpr(this);
}

std::any BaseGrammarParser::PlusMinusExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitPlusMinusExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FuncCallExprContext ------------------------------------------------------------------

BaseGrammarParser::FunctionCallContext* BaseGrammarParser::FuncCallExprContext::functionCall() {
  return getRuleContext<BaseGrammarParser::FunctionCallContext>(0);
}

BaseGrammarParser::FuncCallExprContext::FuncCallExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::FuncCallExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncCallExpr(this);
}
void BaseGrammarParser::FuncCallExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncCallExpr(this);
}

std::any BaseGrammarParser::FuncCallExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitFuncCallExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BoolExprContext ------------------------------------------------------------------

tree::TerminalNode* BaseGrammarParser::BoolExprContext::BOOL() {
  return getToken(BaseGrammarParser::BOOL, 0);
}

BaseGrammarParser::BoolExprContext::BoolExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::BoolExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBoolExpr(this);
}
void BaseGrammarParser::BoolExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBoolExpr(this);
}

std::any BaseGrammarParser::BoolExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitBoolExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenthesisExprContext ------------------------------------------------------------------

BaseGrammarParser::ExpressionContext* BaseGrammarParser::ParenthesisExprContext::expression() {
  return getRuleContext<BaseGrammarParser::ExpressionContext>(0);
}

BaseGrammarParser::ParenthesisExprContext::ParenthesisExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::ParenthesisExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParenthesisExpr(this);
}
void BaseGrammarParser::ParenthesisExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParenthesisExpr(this);
}

std::any BaseGrammarParser::ParenthesisExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitParenthesisExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MulDivExprContext ------------------------------------------------------------------

std::vector<BaseGrammarParser::ExpressionContext *> BaseGrammarParser::MulDivExprContext::expression() {
  return getRuleContexts<BaseGrammarParser::ExpressionContext>();
}

BaseGrammarParser::ExpressionContext* BaseGrammarParser::MulDivExprContext::expression(size_t i) {
  return getRuleContext<BaseGrammarParser::ExpressionContext>(i);
}

tree::TerminalNode* BaseGrammarParser::MulDivExprContext::ASTERISK() {
  return getToken(BaseGrammarParser::ASTERISK, 0);
}

tree::TerminalNode* BaseGrammarParser::MulDivExprContext::SLASH() {
  return getToken(BaseGrammarParser::SLASH, 0);
}

BaseGrammarParser::MulDivExprContext::MulDivExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::MulDivExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMulDivExpr(this);
}
void BaseGrammarParser::MulDivExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMulDivExpr(this);
}

std::any BaseGrammarParser::MulDivExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitMulDivExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumExprContext ------------------------------------------------------------------

tree::TerminalNode* BaseGrammarParser::NumExprContext::NUMBER() {
  return getToken(BaseGrammarParser::NUMBER, 0);
}

BaseGrammarParser::NumExprContext::NumExprContext(ExpressionContext *ctx) { copyFrom(ctx); }

void BaseGrammarParser::NumExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumExpr(this);
}
void BaseGrammarParser::NumExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BaseGrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumExpr(this);
}

std::any BaseGrammarParser::NumExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BaseGrammarVisitor*>(visitor))
    return parserVisitor->visitNumExpr(this);
  else
    return visitor->visitChildren(this);
}

BaseGrammarParser::ExpressionContext* BaseGrammarParser::expression() {
   return expression(0);
}

BaseGrammarParser::ExpressionContext* BaseGrammarParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  BaseGrammarParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  BaseGrammarParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, BaseGrammarParser::RuleExpression, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(63);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ParenthesisExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(53);
      match(BaseGrammarParser::T__0);
      setState(54);
      expression(0);
      setState(55);
      match(BaseGrammarParser::T__1);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<IdExpContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(57);
      match(BaseGrammarParser::IDENTIFIER);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<NumExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(58);
      match(BaseGrammarParser::NUMBER);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<DoubleExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(59);
      match(BaseGrammarParser::DOUBLE_NUMBER);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<StringExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(60);
      match(BaseGrammarParser::STRING_LITERAL);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<FuncCallExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(61);
      functionCall();
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<BoolExprContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(62);
      match(BaseGrammarParser::BOOL);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(77);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(75);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MulDivExprContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(65);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(66);
          antlrcpp::downCast<MulDivExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == BaseGrammarParser::ASTERISK

          || _la == BaseGrammarParser::SLASH)) {
            antlrcpp::downCast<MulDivExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(67);
          antlrcpp::downCast<MulDivExprContext *>(_localctx)->right = expression(10);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<PlusMinusExprContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(68);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(69);
          antlrcpp::downCast<PlusMinusExprContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == BaseGrammarParser::PLUS

          || _la == BaseGrammarParser::MINUS)) {
            antlrcpp::downCast<PlusMinusExprContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(70);
          antlrcpp::downCast<PlusMinusExprContext *>(_localctx)->right = expression(9);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<CompExprContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          newContext->left = previousContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(71);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(72);
          compOperator();
          setState(73);
          antlrcpp::downCast<CompExprContext *>(_localctx)->right = expression(8);
          break;
        }
